--- a/index.html
+++ b/index.html
@@ -3,6 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <title>인천공항 실시간 도착, 입국장 및 주차장 안내</title>
+<!-- ✅ 기본 SEO -->
+<meta name="description" content="인천공항 실시간 도착 정보, 입국장 위치, 주차장 안내까지 한눈에 확인하세요.">
+<meta name="keywords" content="인천공항, 도착, 입국장, 실시간 항공편, 주차장 안내, 공항정보">
+<meta name="author" content="Incheon Airport Info">
+
+<!-- ✅ Open Graph (SNS 공유 시 미리보기) -->
+<meta property="og:title" content="인천공항 실시간 도착·입국장 안내">
+<meta property="og:description" content="실시간 항공편 도착 현황, 입국장 위치, 가까운 주차장 정보를 빠르게 확인하세요.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://airport-info.netlify.app"> <!-- Netlify 주소 -->
+<meta property="og:image" content="https://airport-info.netlify.app/images/airport_bg.jpg"> <!-- 대표 이미지 -->
+
+<!-- ✅ Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="인천공항 실시간 도착·입국장 안내">
+<meta name="twitter:description" content="실시간 항공편 도착 현황, 입국장 위치, 가까운 주차장 정보를 빠르게 확인하세요.">
+<meta name="twitter:image" content="https://airport-info.netlify.app/images/airport_bg.jpg">
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
