--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
   <meta property="og:title" content="인천공항 실시간 도착·입국장 안내">
   <meta property="og:description" content="실시간 항공편 도착 현황, 입국장 위치, 가까운 주차장 정보를 빠르게 확인하세요.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://icn-airport-info.netlify.app">
-  <meta property="og:image" content="https://icn-airport-info.netlify.app/images/airport_bg.jpg">
+  <meta property="og:url" content="https://airport-info.netlify.app">
+  <meta property="og:image" content="https://airport-info.netlify.app/images/airport_bg.jpg">
 
   <!-- ✅ Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="인천공항 실시간 도착·입국장 안내">
   <meta name="twitter:description" content="실시간 항공편 도착 현황, 입국장 위치, 가까운 주차장 정보를 빠르게 확인하세요.">
-  <meta name="twitter:image" content="https://icn-airport-info.netlify.app/images/airport_bg.jpg">
+  <meta name="twitter:image" content="https://airport-info.netlify.app/images/airport_bg.jpg">
 
+  <!-- ✅ 스타일 (필요 시 유지) -->
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -31,35 +32,11 @@
   </header>
 
   <main>
-    <!-- ✅ 기존 안내 UI -->
+    <!-- 여기에 기존 도착/입국장 안내 UI, 주차장 현황 표시 코드 -->
     <div id="app"></div>
   </main>
 
-  <!-- ✅ 방문자 카운터 -->
-  <footer style="margin-top:30px; padding:10px; text-align:center; font-size:15px; color:#333; border-top:1px solid #ddd;">
-    <p>오늘 방문: <span id="todayCount">0</span></p>
-    <p>전체 방문: <span id="totalCount">0</span></p>
-  </footer>
-
-  <!-- ✅ 기존 스크립트 -->
+  <!-- ✅ 스크립트 -->
   <script src="js/script.js"></script>
-
-  <!-- ✅ 방문자 카운터 스크립트 -->
-  <script>
-    // 전체 방문 카운트
-    fetch("https://api.countapi.xyz/hit/icn-airport-info/total")
-      .then(res => res.json())
-      .then(data => {
-        document.getElementById("totalCount").innerText = data.value;
-      });
-
-    // 오늘 날짜별 방문 카운트
-    const todayKey = new Date().toISOString().slice(0,10); // ex) 2025-09-17
-    fetch("https://api.countapi.xyz/hit/icn-airport-info/" + todayKey)
-      .then(res => res.json())
-      .then(data => {
-        document.getElementById("todayCount").innerText = data.value;
-      });
-  </script>
 </body>
 </html>
